Fix submit button on mobile

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -15,3 +15,8 @@
   border: solid #dee2e6;
   border-width: 1px;
 }
+
+.margin-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
